Added phone number to footers and contact page. Also updated all footers to be the same across pages

--- a/about.html
+++ b/about.html
@@ -142,7 +142,7 @@
               <h3 class="h5 mb-1">Wesley Tang</h3>
               <p class="text-secondary mb-3">B.S. Aerospace Eng • M.S. Business • Software Engineer</p>
             </div>
-            <p class="mb-3">Wesley studied Aerospace Engineering at UC Irvine and earned a Master’s in Business from CSU Channel Islands. With over a decade of experience as a engineer and a background in tutoring, Wesley makes math, science, and programming practical, approachable, and engaging for students.</p>
+            <p class="mb-3">Wesley studied Aerospace Engineering at UC Irvine and earned a Master’s in Business from CSU Channel Islands. With over a decade of experience as an engineer and a background in tutoring, Wesley makes math, science, and programming practical, approachable, and engaging for students.</p>
             <ul class="list-unstyled list-check mb-0">
               <li><i class="fa-solid fa-check me-2"></i>High school math (Math 1-3, Algebra, Geometry, Pre-Calc, Calculus)</li>
               <li><i class="fa-solid fa-check me-2"></i>Biology, Chemistry, Physics (incl. AP)</li>
@@ -185,12 +185,22 @@
   </section>
 
   <!-- Footer -->
-  <footer class="pt-5 pb-4">
+  <footer class="pt-5 pb-4 bg-brand text-white">
     <div class="container text-center">
       <h5 class="fw-bold">Tang Tutoring</h5>
-      <p>Helping students build confidence in math, science, and programming.</p>
-      <p class="mb-1"><i class="bi bi-geo-alt-fill me-2"></i>Online anywhere • In‑person across Ventura County</p>
-      <p class="mb-0"><i class="bi bi-envelope-fill me-2"></i><a href="mailto:info@tangtutoring.com" class="text-decoration-none" style="color:var(--brand-accent)">info@tangtutoring.com</a></p>
+      <p>Helping students build confidence in math and beyond.</p>
+      <p>
+        <i class="bi bi-geo-alt-fill me-2"></i>
+        Online anywhere • In‑person across Ventura County
+      </p>
+      <p>
+        <i class="bi bi-envelope-fill me-2"></i>
+        <a href="mailto:info@tangtutoring.com" class="text-accent fw-semibold">info@tangtutoring.com</a>
+      </p>
+      <p>
+        <i class="bi bi-telephone-fill me-2"></i>
+        <a href="tel:8057385756" class="text-accent fw-semibold">(805)738-5756</a>
+      </p>
       <hr class="my-4" />
       <div>© <span id="year"></span> Tang Tutoring</div>
       <span class="d-block small text-secondary">This site was built by Tang Tutoring. <a href="mailto:info@tangtutoring.com" class="text-accent">We can build yours too</a>.</span>
