--- a/services.html
+++ b/services.html
@@ -187,13 +187,23 @@
     </div>
   </section>
 
-  <!-- Footer  -->
-  <footer class="pt-5 pb-4">
+  <!-- Footer -->
+  <footer class="pt-5 pb-4 bg-brand text-white">
     <div class="container text-center">
       <h5 class="fw-bold">Tang Tutoring</h5>
       <p>Helping students build confidence in math and beyond.</p>
-      <p class="mb-1"><i class="bi bi-geo-alt-fill me-2"></i>Online anywhere • In‑person across Ventura County</p>
-      <p class="mb-0"><i class="bi bi-envelope-fill me-2"></i><a href="mailto:info@tangtutoring.com" class="text-decoration-none" style="color:var(--brand-accent)">info@tangtutoring.com</a></p>
+      <p>
+        <i class="bi bi-geo-alt-fill me-2"></i>
+        Online anywhere • In‑person across Ventura County
+      </p>
+      <p>
+        <i class="bi bi-envelope-fill me-2"></i>
+        <a href="mailto:info@tangtutoring.com" class="text-accent fw-semibold">info@tangtutoring.com</a>
+      </p>
+      <p>
+        <i class="bi bi-telephone-fill me-2"></i>
+        <a href="tel:8057385756" class="text-accent fw-semibold">(805)738-5756</a>
+      </p>
       <hr class="my-4" />
       <div>© <span id="year"></span> Tang Tutoring</div>
       <span class="d-block small text-secondary">This site was built by Tang Tutoring. <a href="mailto:info@tangtutoring.com" class="text-accent">We can build yours too</a>.</span>
