--- a/contact.html
+++ b/contact.html
@@ -92,8 +92,14 @@
               <li class="mb-2"><i class="bi bi-credit-card me-2"></i>Payments: Venmo, Zelle, cash, or check</li>
             </ul>
             <div class="p-3 bg-brand-soft rounded-4">
+              <div class="small text-secondary">Prefer phone? Call or text us at</div>
+              <a href="tel:8057385756" class="fw-semibold d-block mb-2" style="color:var(--brand-navy)">
+                <i class="bi bi-telephone-fill me-2"></i>(805)738-5756
+              </a>
               <div class="small text-secondary">Prefer email? Reach us at</div>
-              <a href="mailto:info@tangtutoring.com" class="fw-semibold" style="color:var(--brand-navy)">info@tangtutoring.com</a>
+              <a href="mailto:info@tangtutoring.com" class="fw-semibold" style="color:var(--brand-navy)">
+                <i class="bi bi-envelope-fill me-2"></i>info@tangtutoring.com
+              </a>
             </div>
           </div>
         </div>
@@ -176,12 +182,22 @@
   </section>
 
   <!-- Footer -->
-  <footer class="pt-5 pb-4">
+  <footer class="pt-5 pb-4 bg-brand text-white">
     <div class="container text-center">
       <h5 class="fw-bold">Tang Tutoring</h5>
-      <p>Helping students build confidence in math, science, and programming.</p>
-      <p class="mb-1"><i class="bi bi-geo-alt-fill me-2"></i>Online anywhere • In‑person across Ventura County</p>
-      <p class="mb-0"><i class="bi bi-envelope-fill me-2"></i><a href="mailto:info@tangtutoring.com" class="text-decoration-none" style="color:var(--brand-accent)">info@tangtutoring.com</a></p>
+      <p>Helping students build confidence in math and beyond.</p>
+      <p>
+        <i class="bi bi-geo-alt-fill me-2"></i>
+        Online anywhere • In‑person across Ventura County
+      </p>
+      <p>
+        <i class="bi bi-envelope-fill me-2"></i>
+        <a href="mailto:info@tangtutoring.com" class="text-accent fw-semibold">info@tangtutoring.com</a>
+      </p>
+      <p>
+        <i class="bi bi-telephone-fill me-2"></i>
+        <a href="tel:8057385756" class="text-accent fw-semibold">(805)738-5756</a>
+      </p>
       <hr class="my-4" />
       <div>© <span id="year"></span> Tang Tutoring</div>
       <span class="d-block small text-secondary">This site was built by Tang Tutoring. <a href="mailto:info@tangtutoring.com" class="text-accent">We can build yours too</a>.</span>
