Added advanced programming on about page

--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@
             <ul class="list-unstyled list-check mb-0">
               <li><i class="fa-solid fa-check me-2"></i>High school math (Math 1-3, Algebra, Geometry, Pre-Calc, Calculus)</li>
               <li><i class="fa-solid fa-check me-2"></i>Biology, Chemistry, Physics (incl. AP)</li>
-              <li><i class="fa-solid fa-check me-2"></i>Programming</li>
+              <li><i class="fa-solid fa-check me-2"></i>Advanced Programming</li>
             </ul>
           </div>
         </div>
