--- a/index.html
+++ b/index.html
@@ -61,7 +61,12 @@
   <!-- Nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-brand shadow-sm sticky-top">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">Tang Tutoring</a>
+      <a class="navbar-brand fw-bold d-flex align-items-center" href="index.html" style="margin:0; padding:0;">
+        <img src="images/Tang Tutoring Avatar Transparent.png" alt="Tang Tutoring Logo"
+            style="height:50px; margin-right:10px; position:relative; top:3px;">
+        Tang Tutoring
+      </a>
+      <!-- <a class="navbar-brand fw-bold" href="index.html" style="margin:0; padding:0;">Tang Tutoring</a> -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
         <span class="navbar-toggler-icon"></span>
       </button>
