--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-brand shadow-sm sticky-top">
     <div class="container">
       <a class="navbar-brand fw-bold d-flex align-items-center" href="index.html" style="margin:0; padding:0;">
-        <img src="images/Tang Tutoring Avatar Transparent.png" alt="Tang Tutoring Logo"
+        <img src="images/Tang Tutoring Avatar.png" alt="Tang Tutoring Logo"
             style="height:50px; margin-right:10px; position:relative; top:3px;">
         Tang Tutoring
       </a>
